Changed percentile analysis percentage graph from line to heatmap

--- a/data/data_processing.ipynb
+++ b/data/data_processing.ipynb
@@ -360,14 +360,44 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "f9ec1b06",
+      "metadata": {},
+      "source": [
+        "## Add Pew research center income classes"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 240,
       "id": "59fKI5Bwpnzr",
       "metadata": {
         "id": "59fKI5Bwpnzr"
       },
       "outputs": [],
       "source": [
+        "def classify_income_group(df):\n",
+        "    income_classes = []\n",
+        "\n",
+        "    for year in df['YEAR'].unique():\n",
+        "        year_data = df[df['YEAR'] == year]\n",
+        "        median_income = year_data['ADJUSTED_INC'].median()\n",
+        "\n",
+        "        # Define ranges (based on Pew logic)\n",
+        "        lower = year_data['ADJUSTED_INC'] < 0.67 * median_income\n",
+        "        middle = (year_data['ADJUSTED_INC'] >= 0.67 * median_income) & (year_data['ADJUSTED_INC'] <= 2 * median_income)\n",
+        "        upper = year_data['ADJUSTED_INC'] > 2 * median_income\n",
+        "\n",
+        "        income_group = pd.Series(index=year_data.index, dtype=\"object\")\n",
+        "        income_group[lower] = 'Lower'\n",
+        "        income_group[middle] = 'Middle'\n",
+        "        income_group[upper] = 'Upper'\n",
+        "\n",
+        "        income_classes.append(income_group)\n",
+        "\n",
+        "    df['INCOME_CLASS'] = pd.concat(income_classes).sort_index()\n",
+        "    return df\n",
+        "\n",
         "### Add extra feature aggregates to family record\n",
         " ## ---------------------------------------------------------------------------------------------------------------------------------------------\n",
         "grouped_per = merged_per.groupby(['YEAR', 'PH_SEQ', 'PF_SEQ'])[['CAP_VAL', 'DIV_VAL', 'RTM_VAL']].sum()\n",
@@ -376,6 +406,8 @@
         "\n",
         "fam_plus.rename(columns = {'CAP_VAL': 'CAP_TOT', 'DIV_VAL': 'DIV_TOT', 'RTM_VAL': 'RTM_TOT'}, inplace = True)\n",
         "fam_plus['ADJUSTED_INC'] = fam_plus['FTOTVAL'] / (fam_plus['FPERSONS'])**.5\n",
+        "\n",
+        "fam_plus = classify_income_group(fam_plus)\n",
         "\n",
         "### Merging family and person dataframes\n",
         " ## ---------------------------------------------------------------------------------------------------------------------------------------------\n",
@@ -401,13 +433,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 241,
       "id": "-_DWxfqNqTbO",
       "metadata": {
         "id": "-_DWxfqNqTbO"
       },
       "outputs": [],
       "source": [
+        "fam_plus.to_csv('output/merged/merged_fam.csv', index=False)\n",
         "merged_asec.to_csv('output/merged/merged_asec.csv', index=False)"
       ]
     }
